<resources>
    <string name="app_name">MyGrades</string>
    <string name="mathTitle">Mathematik</string>
    <string name="englishTitle">Englisch</string>
    <string name="frenchTitle">Französisch</string>
    <string name="chemistryTitle">Chemie</string>
    <string name="grade">Keine Noten</string>

    <string name="labelSubject">Schulfach</string>

    <string name="subjectPageTitle">Noten </string>
    <string name="formPageTitle">Note erfassen</string>
    <string name="testTitleLabel">Prüfungstitel</string>
    <string name="markLabel">Note</string>
    <string name="submitForm">Abschliessen</string>

    <string-array name="subjectSpinner">
        <item>Mathematik</item>
        <item>Englisch</item>
        <item>Französisch</item>
        <item>Chemie</item>
    </string-array>
    <string name="appwidget_text">Mathematik \nKeine Note</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
</resources>